--- a/thecloudcollege/amplify/backend/backend-config.json
+++ b/thecloudcollege/amplify/backend/backend-config.json
@@ -1,20 +1,18 @@
 {
   "api": {
-    "api": {
-      "service": "AppSync",
+    "seat": {
+      "service": "API Gateway",
       "providerPlugin": "awscloudformation",
-      "output": {
-        "authConfig": {
-          "defaultAuthentication": {
-            "authenticationType": "API_KEY",
-            "apiKeyConfig": {
-              "apiKeyExpirationDays": 7,
-              "description": "demo"
-            }
-          },
-          "additionalAuthenticationProviders": []
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "seatlambda",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         }
-      }
+      ]
     }
   },
   "auth": {
@@ -23,6 +21,33 @@
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
       "customAuth": false
+    }
+  },
+  "storage": {
+    "sear": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
+    }
+  },
+  "function": {
+    "seatlambda": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "storage",
+          "resourceName": "sear",
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "attributeEnvMap": {
+            "Name": "TABLE_NAME",
+            "Arn": "TABLE_ARN"
+          }
+        }
+      ]
     }
   }
 }
