--- a/.github/workflows/create_image.yaml
+++ b/.github/workflows/create_image.yaml
@@ -15,6 +15,6 @@ jobs:
       - name: Build and push Docker image
         run: |
           aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 244530008913.dkr.ecr.eu-north-1.amazonaws.com
-          docker build . -t glenn
-          docker tag glenn:latest 244530008913.dkr.ecr.region.amazonaws.com/glenn:latest
-          docker push 244530008913.dkr.ecr.region.amazonaws.com/glenn:latest
+          docker build . -t hello
+          docker tag hello:latest 244530008913.dkr.ecr.eu-north-1.amazonaws.com/glenn:latest
+          docker push 244530008913.dkr.ecr.eu-north-1.amazonaws.com/glenn:latest
