--- a/.github/workflows/create_image.yaml
+++ b/.github/workflows/create_image.yaml
@@ -1,9 +1,14 @@
 name: Publish Docker image
 
 on:
-  release:
-    types: [published]
-
+  # Trigger the workflow on push or pull request,
+  # but only for the main branch
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
