--- a/.github/workflows/create_image.yaml
+++ b/.github/workflows/create_image.yaml
@@ -18,6 +18,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and push Docker image
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 244530008913.dkr.ecr.eu-north-1.amazonaws.com
           docker build . -t hello
