--- a/.github/workflows/create_image.yaml
+++ b/.github/workflows/create_image.yaml
@@ -23,7 +23,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 244530008913.dkr.ecr.eu-west-1.amazonaws.com
-          export rev = $(git rev-parse --short HEAD)
+          rev=$(git rev-parse --short HEAD)
           docker build . -t hello:$rev
           docker tag hello:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
