--- a/.github/workflows/create_image.yaml
+++ b/.github/workflows/create_image.yaml
@@ -27,3 +27,5 @@ jobs:
           docker build . -t hello:$rev
           docker tag hello:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
+          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest
+'
