--- a/.github/workflows/create_image.yaml
+++ b/.github/workflows/create_image.yaml
@@ -26,6 +26,7 @@ jobs:
           rev=$(git rev-parse --short HEAD)
           docker build . -t hello:$rev
           docker tag hello:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
+          docker tag hello:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest
 '
