--- a/.github/workflows/create_image.yaml
+++ b/.github/workflows/create_image.yaml
@@ -25,7 +25,7 @@ jobs:
           aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 244530008913.dkr.ecr.eu-west-1.amazonaws.com
           rev=$(git rev-parse --short HEAD)
           docker build . -t hello:$rev
-          docker tag hello:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
-          docker tag hello:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest
-          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
-          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest
+          docker tag hello:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/danib:$rev
+          docker tag hello:$rev 244530008913.dkr.ecr.eu-west-1.amazonaws.com/danib:latest
+          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/danib:$rev
+          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/danib:latest
